[package]
name = "json_config"
version = "0.1.4"
authors = ["harindaka <harindaka@gmail.com>"]
description = "A JSON based configuration management solution for Rust applications."
homepage = "https://github.com/harindaka/json_config"
repository = "https://github.com/harindaka/json_config"

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "README.md"

keywords = ["JSON", "json", "config", "configuration", "patch"]

# crates.io/category_slugs
categories = ["config", "parsing"]

license = "MIT/Apache-2.0"


[badges]

# Maintenance: `status` is required Available options are `actively-developed`,
# `passively-maintained`, `as-is`, `none`, `experimental`, `looking-for-maintainer`
# and `deprecated`.
maintenance = { status = "experimental" }


[dependencies]
serde = "1.0.20"
serde_json = "1.0.6"
# serde_derive = "1.0.21"

# [build-dependencies]
# json_config = "0.1.1"
# serde_json = "1.0.6"